adicionando lógica para pegar cada script

--- a/AWSServerless2/templateWeeklySupplyByPriority.html
+++ b/AWSServerless2/templateWeeklySupplyByPriority.html
@@ -3,10 +3,15 @@
 <html>
 <head>
     <!--pegar todo o conteúdo do script -->
+    <script>
+        var = "luigi teste áãâáà"
+    </script>
+
+    <script>
+        var = "luigi teste áãâáà"
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.1/dist/echarts.min.js"></script>
-    <!--<meta charset="UTF-8">-->
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--<meta content="utf-8" http-equiv="encoding">-->
     <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
@@ -364,29 +369,13 @@
         </tbody>
     </table>
 
-    <!--########## teste de sript ##########-->
-
     <script>
-        //var teste2 = "Teste 2 Luigi áàãâ"
-
-        //var stringEmail = "nomePessoa@email.com.br";
-        //var resultadoEmail = stringEmail.split("@");
-        var testeString = "Vamos testar o uso de expressões regulares!";
-        var resultadoTesteString = testeString.split(/[\s,]+/)
-        document.getElementById("demo2").innerHTML = resultadoTesteString;
-
+        var = "teste";
     </script>
 
-    <p>Teste 3 ãááàâ</p>
+    
 
-    <script charset="UTF-8">
-        var teste = "Teste Luigi áàãâ"
-        document.getElementById("demo").innerHTML = teste;
-    </script>
-
-    <!--########## teste de sript ##########-->
-    <!--<script type="text/javascript" charset="UTF-8">-->
-    <script>
+    <script type="text/javascript" charset="UTF-8">
         var optionEcharts = {
             //legend: {},
             legend: {
@@ -435,6 +424,5 @@
         var myChart = echarts.init(document.getElementById('main'));
         myChart.setOption(optionEcharts);
     </script>
-
 </body>
 </html>
